# klicker

./:  (Copia conflictiva de sleipnir 2013-05-20).directory  .directory  CMakeLists.txt  configform.cpp  configform.h  install.sh  klickerlauncher.cpp  klickerlauncher.h  plasma-applet-klicker.desktop  uno
form/: configform.ui
